# claude-worktrees

./: .gitignore  CLAUDE.md  Cargo.toml  SPEC.md  cwt  go.mod  go.sum  pyproject.toml
cmd/cwt/: main.go
internal/pty/: manager.go  session.go
internal/tui/: app.go
internal/worktree/: manager.go  state.go
plugin/.claude-plugin/: plugin.json
plugin/agents/: merge-orchestrator.md
plugin/commands/: help.md  merge.md  status.md
src/: app.rs  main.rs  pty.rs  worktree.rs
