[package]
name = "cwt"
version = "0.1.0"
edition = "2021"
description = "Claude Worktree Tabs - Run multiple Claude agents in parallel"

[dependencies]
# TUI - use older version compatible with Rust 1.83
ratatui = "0.26"
crossterm = "0.27"

# PTY
portable-pty = "0.8"

# Terminal emulation
vt100 = "0.15"

# Serialization for state
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random ID generation
rand = "0.8"
