[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cwt"
version = "0.1.0"
description = "Claude Worktree Tabs - Multi-agent orchestration TUI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "ptyprocess>=0.7.0",
    "pyte>=0.8.0",
]

[project.scripts]
cwt = "cwt:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cwt"]
